--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!-- Cardapium -->
 
-<div class="container">  
-  
-</div>
+<app-navbar></app-navbar>
+<div class="container"></div>
 <router-outlet></router-outlet>
