--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,15 @@
-<p>navbar works!</p>
+
+<ul class="nav-bar" routerLinkActive="active">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="home">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="produtos">Produtos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="clientes">Clientes</a>
+    </li>
+</ul>
+
+<router-outlet></router-outlet>
+
