--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <!-- Cardapium -->
 
+<!-- Barra de navegação -->
 <app-navbar></app-navbar>
-<div class="container"></div>
+
+
+<app-produtos></app-produtos>
+
+
+
+<!-- Footer  -->
+<app-footer></app-footer>
+
 <router-outlet></router-outlet>
