--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -21,7 +21,7 @@
   }
 
 .nav-link {
-    color: #ffffff;
+    color: #000000;
     font-size: 2rem;
     outline: none;
     text-decoration: none    
