atualizar formularios produtos e clientes

--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,27 +1,34 @@
-<form>
-    
-    <label for="cliente">Nome</label>
-    <input type="text" name="nome-cliente" 
-           id="cliente" placeholder="Ze do Caroço"
-           required>    
-           
-    <label for="telefone">Telefone</label>
-    <input type="text" name="telefone-cliente"
-           id="telefone" minlength="11" maxlength="11"
-           placeholder="21 11111 2222"               
-           required>
 
-    <label for="email">E-mail</label>
-    <input type="email" name="mail-cliente" 
-           id="email" placeholder="zezito@caroço.com.br"
-           required>
+<!-- Formulario dos clientes  -->
+
+<form [formGroup]="clientesForm" (ngSubmit)="onSubmit()">
     
-    <label for="cep">CEP</label>
-    <input type="text" name="cep-cliente" 
-           id="cep" minlength="8" maxlength="8"
-           placeholder="12345678"
-           required>        
+    <label>
+      Nome
+      <input type="text" formControlName="nome" required>
+    </label>
     
+    <label>
+      CPF
+      <input type="text" formControlName="cpf" required>
+    </label>
+
+    <label>
+      Telefone      
+      <input type="text" formControlName="telefone" required>
+    </label>
+    
+    <label>
+      E-mail      
+      <input type="text" formControlName="email" required>
+    </label>
+    
+    <label>
+      CEP      
+      <input type="text" formControlName="cep" required>
+    </label>
+
+
     <button type="submit">Confirma</button>
 
   </form>
