--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -3,39 +3,29 @@
 
 <form [formGroup]="produtosForm" (ngSubmit)="onSubmit()">
 
-  <label>Nome
-    
-    <input type="text" 
-           formControlName="nome" required>    
-
+  <label>
+    Nome    
+    <input type="text" formControlName="nome" required>
   </label>
 
-  <label>Sabor
-
-    <input type="text"  
-           formControlName="sabor" required>
-
+  <label>
+    Sabor
+    <input type="text" formControlName="sabor" required>
   </label>
   
-  <label>Quantidade
-    
-    <input type="text"  
-           formControlName="quantidade" required>
-
+  <label>
+    Quantidade
+    <input type="text" formControlName="quantidade" required>
   </label>
 
-  <label>ID
-    
-    <input type="text" 
-           formControlName="id" required>
-  
+  <label>
+    ID    
+    <input type="text" formControlName="id" required>  
   </label>
   
-  <label>Data
-    
-    <input type="text" 
-           formControlName="data" required>    
-
+  <label>
+    Data    
+    <input type="text" formControlName="data" required>    
   </label>
   
   <button type="submit">Confirma</button>
