--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -29,6 +29,10 @@
     </label>
 
 
-    <button type="submit">Confirma</button>
+    <button type="submit">Confirma</button>    
 
   </form>
+
+  <p>
+    Form Value: {{ clientesForm.value | json }}
+  </p>
