--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-navbar></app-navbar>
 
 
-<app-produtos></app-produtos>
+<!-- <app-produtos></app-produtos> -->
 
 <app-clientes></app-clientes>
 
