--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,27 @@
 <!-- Cardapium -->
+<nav class="nav-bar">
 
-<!-- Barra de navegação -->
-<app-navbar></app-navbar>
+  <a class="nav-link" routerLink=""
+     routerLinkActive="active">Home</a>
 
-
-<!-- <app-produtos></app-produtos> -->
-
-<app-clientes></app-clientes>
-
-
-<!-- Footer  -->
-<app-footer></app-footer>
+  <a class="nav-link" routerLink="/produtos"
+     routerLinkActive="active">Produtos</a>
+    
+  <a class="nav-link" routerLink="/clientes"
+     routerLinkActive="active">Clientes</a>  
+    
+</nav>
 
 <router-outlet></router-outlet>
+
+<div class="footer">
+    <a href=""> 
+      <img src="./../assets/images/note.png" alt="Lista Produtos"/> 
+    </a>  
+    <a href=""> 
+      <img src="./../assets/images/user.png" alt="Lista Clientes"/> 
+    </a>  
+    <a href=""> 
+      <img src="./../assets/images/location.png" alt="Procurar Endereço"/> 
+    </a>          
+</div>
