'mudancas na estiliuzacao'

--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -24,10 +24,15 @@
   </label>
   
   <label>
-    Data    
+    Data Validade    
     <input type="text" formControlName="data" required>    
   </label>
   
+  <label>
+    Data Entrada    
+    <input type="text" formControlName="data" required>    
+  </label>
+
   <button type="submit">Confirma</button>
 
   <p>
