--- a/src/app/produtos/produtos.component.css
+++ b/src/app/produtos/produtos.component.css
@@ -13,7 +13,10 @@
     color: #000000;
     font-weight: bold;
   }
-  
+  form {
+    font-family: inherit;
+    font-size: 1em;
+  }
   input {
     height: 2em;
     font-size: 1em;
