--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -25,12 +25,12 @@
   
   <label>
     Data Validade    
-    <input type="text" formControlName="data" required>    
+    <input type="text" formControlName="datavalidade" required>    
   </label>
   
   <label>
     Data Entrada    
-    <input type="text" formControlName="data" required>    
+    <input type="text" formControlName="dataentrada" required>    
   </label>
 
   <button type="submit">Confirma</button>
