--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -11,33 +11,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedProduto">
-
-  <h2>{{selectedProduto.name | uppercase}} Detalhes</h2>
-  <div><span>Id: </span>{{ selectedProduto.id }}</div>
-  <div><span>Data Validade </span>{{ selectedProduto.datavalidade }}</div>
-  
-  <div>
-    <label>
-      Nome    
-      <input [(ngModel)]="selectedProduto.nome" placeholder="nome">
-    </label>
-    <label>
-      Sabor
-      <input [(ngModel)]="selectedProduto.sabor" placeholder="sabor">
-    </label>
-    <label>
-      Quantidade
-      <input [(ngModel)]="selectedProduto.quantidade" placeholder="quantidade">
-    </label>
-    <label>
-      Data Validade    
-      <input [(ngModel)]="selectedProduto.datavalidade" placeholder="01/12/2022">    
-    </label>
-    <label>
-      Data Entrada    
-      <input [(ngModel)]="selectedProduto.dataentrada" placeholder="01/12/2020">    
-    </label>
-  </div>
-
-</div>
+<app-produto-detalhe [produto]="selectedProduto"></app-produto-detalhe>
