estilizaçao e rotas dos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
 <!-- Cardapium -->
 
-<nav class="nav-bar">
-
-  <a class="nav-link" routerLink=""
-     routerLinkActive="active">Home</a>
-
-  <a class="nav-link" routerLink="/produtos"
-     routerLinkActive="active">Produtos</a>
-    
-  <a class="nav-link" routerLink="/clientes"
-     routerLinkActive="active">Clientes</a>  
-    
+<nav>
+  <a routerLink="">Home</a>
+  <a routerLink="/produtos">Produtos</a>    
+  <a routerLink="/clientes">Clientes</a>      
 </nav>
 
 <router-outlet></router-outlet>
