--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,39 @@
 h1 {
-  font-size: 3em;
-  margin: 3em auto;
+  font-size: 5em;
+  text-align: center;
+  margin-top: 2em;
+}
+h3 {
+  font-size: 2em;
+  font-weight: lighter;
+  text-align: center;
+  margin-top: 3em;
+}
+.melhores {
+  margin: .5em auto;
+  width: 40em;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;  
+}
+
+a {
+  padding: 5px 10px;
+  text-decoration: none;   
+  background-color: #eee;
+  border-radius: 4px;
+  font-size: 1em;
   text-align: center;
 }
+a:visited, a:link {
+  color: #334953;
+}
+a:hover {
+  color: #039be5;
+  background-color: #cfd8dc;
+}
+a.active {
+  color: #039be5;
+}
+
