--- a/src/app/mensagens/mensagens.component.css
+++ b/src/app/mensagens/mensagens.component.css
@@ -1,15 +1,17 @@
 
-h2 {
-  color: red;
-  font-family: Arial, Helvetica, sans-serif;
+span {
+  color: crimson;
+  font-family: Arial;
+  font-size: 1.5em;
   font-weight: lighter;
+  margin-right: 2em;
 }
-
 button.clear {
-  font-family: Arial, sans-serif;
+  display: inline-flex;
+  font-family: Arial;
+  font-size: 1.5em;
   color: #333;
-  background-color: #eee;
-  margin-bottom: 12px;
+  background-color: #eee;  
   border: none;
   padding: 5px 10px;
   border-radius: 4px;
@@ -17,4 +19,12 @@ button.clear {
 }
 button:hover {
   background-color: #cfd8dc;
+}
+.container {
+  width: 60em;
+  margin: 5em auto;  
+}
+.mensagens {
+  font-size: 1.2em;
+  color: black;
 }
