--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,24 @@ nav {
   flex-flow: row nowrap;
   justify-content: space-around;  
 }
+nav a {
+  padding: 5px 10px;
+  text-decoration: none; 
+  display: inline-block;
+  background-color: #eee;
+  border-radius: 4px;
+}
+nav a:visited, a:link {
+  color: #334953;
+}
+nav a:hover {
+  color: #039be5;
+  background-color: #cfd8dc;
+}
+nav a.active {
+  color: #039be5;
+}
+
 
 .footer {
   margin-top: 20px;
@@ -15,6 +33,6 @@ nav {
 }
 
 a {
-  font-size: 1.5em;
+  font-size: 2em;
   text-align: center;
 }
