--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -1,10 +1,19 @@
 <!-- Formulario dos produtos  -->
+<div class="form">
+  <span class="nome">Nome do Produto: </span> <input #produtoNome />  
+  <button (click)="add(produtoNome.value); produtoNome.value=''">
+    Adicionar
+  </button>
+</div>
 
 <ul class="produtos">
   <li *ngFor="let produto of produtos">
     <a routerLink="/produto/{{produto.id}}">
       <span class="id">ID: {{ produto.id }}</span> 
       <span class="nome">{{ produto.nome | titlecase }}</span>
+      <button class="delete" (click)="delete(produto)">
+        Apagar Produto
+      </button>
     </a>
   </li>
 </ul>
