--- a/src/app/produtos/produtos.component.css
+++ b/src/app/produtos/produtos.component.css
@@ -1,15 +1,15 @@
 .produtos {
   margin: 5em auto;
   list-style-type: none;  
-  width: 90%;
+  width: 80%;
   display: flex;
   flex-flow: column nowrap;
-  justify-content:space-evenly;
+  justify-content: center;
   align-items: center;
 }
 .form {
   margin: 5em auto;
-  width: 90%;
+  width: 80%;
   display: flex;
   align-items: center;
 }
@@ -27,10 +27,10 @@ input {
 li {
   margin: 1em 2em;
   padding: .5em .8em;
-  width: 20em;
+  width: 30em;
   height: 3em;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   background-color: #eee;
   border-radius: 4px;
@@ -55,6 +55,7 @@ button {
   border-radius: 4px;
   cursor: pointer;
   margin-left: 1em;
+  display: inline;
 }
 
 button:hover {
