--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -1,7 +1,7 @@
 <!-- Formulario dos produtos  -->
 <div class="form">
   <span class="nome">Nome do Produto: </span> <input #produtoNome />  
-  <button (click)="add(produtoNome.value); produtoNome.value=''">
+  <button (click)="add(produtoNome.value)">  <!--produtoNome.value='' -->
     Adicionar
   </button>
 </div>
@@ -11,9 +11,7 @@
     <a routerLink="/produto/{{produto.id}}">
       <span class="id">ID: {{ produto.id }}</span> 
       <span class="nome">{{ produto.nome | titlecase }}</span>
-      <button class="delete" (click)="delete(produto)">
-        Apagar Produto
-      </button>
+      <button class="delete" (click)="delete(produto)">Apagar</button>
     </a>
   </li>
 </ul>
