--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,17 @@
 </nav>
 
 <router-outlet></router-outlet>
-
 <app-mensagens></app-mensagens>
 
+
 <div class="footer">
-    <a href=""> 
-      <img src="./../assets/images/note.png" alt="Lista Produtos"/> 
-    </a>  
-    <a href=""> 
-      <img src="./../assets/images/user.png" alt="Lista Clientes"/> 
-    </a>  
-    <a href=""> 
-      <img src="./../assets/images/location.png" alt="Procurar Endereço"/> 
-    </a>          
+  <a href="https://github.com/shemuelx/cardapium" target="_blank"> 
+    <img src="./../assets/images/link.png" alt="Lista Produtos"/> 
+  </a>  
+  <a href="https://totidiversidade.com.br/" target="_blank"> 
+    <img src="./../assets/images/user.png" alt="Lista Clientes"/> 
+  </a>  
+  <a href="https://brazil.iom.int/" target="_blank"> 
+    <img src="./../assets/images/location.png" alt="Procurar Endereço"/> 
+  </a>          
 </div>
