--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
-<h1>{{ title }}</h1>
-
-<h3>Produtos Frequentes:</h3>
-<div class="melhores">
-  <a *ngFor="let produto of produtos"
-     routerLink="produto/{{produto.id}}">{{ produto.nome | titlecase }}</a>
+<div class="cont">  
+</div>
+<div class="text">  
+  <h3>Produtos Frequentes</h3>
+  <div class="melhores">
+    <a *ngFor="let produto of produtos"
+       routerLink="produto/{{produto.id}}">{{ produto.nome | titlecase }}</a>
+  </div>
 </div>
