--- a/src/app/produto-detalhe/produto-detalhe.component.css
+++ b/src/app/produto-detalhe/produto-detalhe.component.css
@@ -1,34 +1,52 @@
-
-:host {
-  display: flex;
-  flex-direction: column;
-  padding-top: 24px;  
-}
-h2 {  
-  font-size: 2em;      
+.container {
+  width: 100%;
+  background-color: #fff1e6;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 .form {
-  margin-left: 15em;
+  margin: 3em auto;
+  box-sizing: border-box;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;    
+  padding-top: 24px;
+  font-family: inherit;  
 }
-label {
-  display: block;
-  width: 10em;
-  margin: .5em 0;
+h2 {  
+  font-size: 3em;      
+}
+
+label {  
+  width: 10em;  
   color: #000000;
   font-weight: bold;
+  font-size: 1.5em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  
 }
 
 input {
-  height: 2em;
-  width: 15em;
-  font-size: 1em;
-  padding-left: .4em;
+  font-family: inherit;
+  font-size: 1.2em;  
+  width: 20em;
+  height: 1.6em;
+	border: 1px solid #999;
+  border-radius: 0.25em;
 }
 
-button { 
-  margin-left: 5em;   
-  background-color: #eee;    
-  padding: 10px 10px;
+button {
+  margin: 1em 0;
+  font-family: inherit;
+  font-weight: bolder;
+  font-size: 2em;
+  color: #333;
+  background-color: #eee;  
+  border: none;
+  padding-top: 1em;
+  padding-bottom: 1em;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -42,4 +60,3 @@ button:disabled {
   color: #ccc;
   cursor: auto;
 }
-
