--- a/src/app/produtos/produtos.component.css
+++ b/src/app/produtos/produtos.component.css
@@ -1,75 +1,44 @@
 .produtos {
-  margin: 5em auto;
-  list-style-type: none;  
-  width: 80%;
+  margin-top: .5em;
+  height: 40em; 
+  background-size: cover; 
+  width:auto;
+  background-image:url('../../assets/images/produtos.jpg');
+  background-position: 50% 50%;
+}
+
+.container { 
+  margin: 4em 0;
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
 }
-.form {
-  margin: 5em auto;
-  width: 80%;
-  display: flex;
-  align-items: center;
+ul { 
+  list-style: none;
 }
-.nome {  
-  margin-right: 1em;
-  color: #000000;
-  font-weight: bold;
+
+li {  
+  box-sizing: border-box;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em; 
+  background-color: #b185db;
 }
-input {
-  height: 2em;
-  width: 15em;
-  font-size: 1em;
-  padding-left: .4em;
-}
-li {
-  margin: 1em 2em;
-  padding: .5em .8em;
-  width: 30em;
-  height: 3em;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #eee;
-  border-radius: 4px;
-}
+
 a {  
   text-decoration: none;   
-  border-radius: 4px;
-  font-size: 1.5em;  
+  font-size: 2.8em;
+  text-align: left;
+  margin: 0 .5em;
 }
 a:visited, a:link {
-  color: #334953;
+  color: #fdfffc;
 }
 a:hover {
-  color: #039be5;  
+  color: #039be5; 
 }
 a.active {
   color: #039be5;
-}
-button {
-  background-color: #eee;    
-  padding: 8px 8px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-left: 1em;
-  display: inline;
-}
-
-button:hover {
-  background-color: #cfd8dc;
-}
-button:disabled {
-  background-color: #eee;
-  color: #ccc;
-  cursor: auto;
-}
-button.delete {
-  background-color: snow;
-  color: red;
-}
-.nome {
-  margin-left: 1.25em;
 }
