--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.cont{
+.container{
   margin-top: .5em;
   height: 40em; 
   background-size: cover; 
@@ -19,7 +19,7 @@ h3 {
 }
 .melhores {
   margin: 6em auto;
-  width: 90%;
+  width: 60%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -29,7 +29,7 @@ h3 {
 a {  
   text-decoration: none;     
   border-radius: 4px;
-  font-size: 2em;
+  font-size: 2.5em;
   text-align: center;
 }
 a:visited, a:link {
@@ -41,4 +41,3 @@ a:hover {
 a.active {
   color: #039be5;
 }
-
